2006-06-14  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Starting to add remote devices, primitive so far.

2006-06-08  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Making Bottle a better behaved recursive data structure (an
	s-expression in disguise).

2006-06-06  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Added Port::setReaderCreator so users can have persistent
	readers for each port input.

2006-06-02  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Added missing Thread::isRunning method.

2006-05-31  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* Changed dgram/mcast behavior for overflowing packets.

2006-05-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* Started ChangeLog.