@@ -1,3 +1,8 @@
+2006-07-03  Paul Fitzpatrick  <paulfitz@localhost.localdomain>
+
+	* Large documentation updates; library brought into
+	alignment with network type specifications.
+
 2006-06-14  Paul Fitzpatrick  <paulfitz@localhost.localdomain>
 
 	* Starting to add remote devices, primitive so far.
